@@ -1,5 +1,15 @@
                         Dear Emacs, please make this -*-Text-*- mode!
 
+                CHANGES IN tm VERSION 0.3-3
+
+NEW FEATURES
+
+    o   The abstract Source class gets a default implementation for
+        the stepNext() method. It increments the position counter by
+        one, a reasonable value for most sources. For special purposes
+        custom methods can be created via overloading stepNext() of
+        the subclass.
+
                 CHANGES IN tm VERSION 0.3-2
 
 NEW FEATURES
